--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../dist/output.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
 </head>
 <body class="bg-primary text-white font-montserrat">
 
@@ -212,7 +212,7 @@
         </div>
     </div>
 
-<script src="../public/index.js"></script>
+<script src="./index.js"></script>
 
 </body>
 </html>
